# OpenMonitor

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  README_ja.md  README_zh-CN.md  build.gradle.kts  dev-cpu-gpu.md  gradle.properties  pay.md  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: alpha.yml  build.yml  release.yml
.wrangler/cache/: wrangler-account.json
app/: build.gradle.kts  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: agreement.md  monitor-daemon
app/src/main/assets/daemon/: daemon-commit.txt
app/src/main/assets/licenses/: AndroidX-LICENSE-Apache-2.0.txt  BouncyCastle-LICENSE-Apache-2.0.txt  CBOR-LICENSE-Apache-2.0.txt  DaggerHilt-LICENSE-Apache-2.0.txt  Guava-LICENSE-Apache-2.0.txt  KeyAttestation-LICENSE-Apache-2.0.txt  Kotlin-LICENSE-Apache-2.0.txt  ShizukuAPI-LICENSE-MIT.txt  Vico-LICENSE-Apache-2.0.txt  XLog-LICENSE-Apache-2.0.txt  libraries.json  libsu-LICENSE-Apache-2.0.txt
app/src/main/cpp/: CMakeLists.txt  cpuinfo_bridge.cpp  vulkan_info.cpp
app/src/main/res/drawable/: ic_github.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_mode_adb.xml  ic_mode_apatch.xml  ic_mode_basic.xml  ic_mode_kernelsu.xml  ic_mode_magisk.xml  ic_mode_root.xml  ic_mode_shizuku.xml  (+5 more)
core/core-common/: build.gradle.kts
core/core-data/: build.gradle.kts
core/core-database/: build.gradle.kts
core/core-database/schemas/com.cloudorz.monitor.core.database.MonitorDatabase/: 1.json  2.json
core/core-database/schemas/com.cloudorz.openmonitor.core.database.MonitorDatabase/: 3.json  4.json  5.json  6.json  7.json
core/core-model/: build.gradle.kts
core/core-server-api/: build.gradle.kts
core/core-ui/: build.gradle.kts
feature/feature-appbias/: build.gradle.kts
feature/feature-battery/: build.gradle.kts
feature/feature-charge/: build.gradle.kts
feature/feature-cpu/: build.gradle.kts
feature/feature-float/: build.gradle.kts
feature/feature-fps/: build.gradle.kts
feature/feature-hardware/: build.gradle.kts
feature/feature-key-attestation/: build.gradle.kts
feature/feature-overview/: build.gradle.kts
feature/feature-power/: build.gradle.kts
feature/feature-process/: build.gradle.kts
gradle/: libs.versions.toml
monitor-daemon/: .gitignore  CLAUDE.md  build.sh  go.mod  test_client.py
monitor-daemon/cmd/client/: main.go
monitor-daemon/cmd/daemon/: main.go
monitor-daemon/collector/: battery.go  collector.go  cpu.go  ddr.go  fps.go  gpu.go  logger.go  memory.go  sysfile.go  thermal.go
monitor-daemon/daemon/: daemon.go
monitor-daemon/proto/: proto.go
monitor-daemon/server/: processes.go  server.go  watchdog.go
scripts/: battery-diag.sh  generate-activation-code.sh  setup-aarch64-build-env.sh
server-rs/: Cargo.toml  README.md  build.gradle.kts  build.rs
server-rs/aidl-system/: README.md
server-rs/aidl/android/os/: ParcelFileDescriptor.aidl
server-rs/aidl/com/cloudorz/openmonitor/server/: IMonitorCallback.aidl  IMonitorService.aidl
server-rs/src/: aidl_gen.rs  apk_sign.rs  auth.rs  binder_push.rs  core.rs  fg.rs  fps.rs  ipc.rs  jni_entry.rs  lib.rs  logging.rs  main.rs  service.rs  shm.rs  snapshot.rs  subproc.rs
server-rs/src/collectors/: cached_file.rs  cpu.rs  fps.rs  gpu.rs  memory.rs  mod.rs  power.rs  thermal.rs
server-rs/src/events/: battery_props.rs  display.rs  foreground.rs  mod.rs  sf_dump.rs  task_stack.rs
server-shim/: build.gradle.kts
service/: build.gradle.kts
(+430 files in other folders)
