[package]
name = "openmonitor-server"
version = "0.2.0"
edition = "2021"
publish = false
rust-version = "1.78"

# Single binary: daemon that listens on an AF_UNIX socket. The libsu / Shizuku
# / ADB launchers all exec this same binary — mode-specific behavior is
# controlled by --mode.
[[bin]]
name = "openmonitor-server"
path = "src/main.rs"

# Library surface is kept so integration tests / fuzzers can drive the
# protocol parsers without shelling out to the binary. Host tests (cargo test
# on macOS/Linux x86_64) exercise apk_sign + ipc framing.
[lib]
name = "openmonitor_server"
path = "src/lib.rs"

[dependencies]
# POSIX: fork, setsid, SO_PEERCRED, signal.
nix = { version = "0.29", features = ["fs", "process", "signal", "socket", "user"] }

libc = "0.2"
# `std` feature enables `set_boxed_logger`.
log = { version = "0.4", features = ["std"] }

# Wire protocol: JSON frames.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# APK v2 signing-block certificate hashing.
sha2 = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
android_log-sys = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"          # size over speed for a steady-state daemon
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1            # on-device dev remains tolerable
